Fixes homepage top-menu background being too tall on smallest screens

--- a/app/_scss/sections/_home.scss
+++ b/app/_scss/sections/_home.scss
@@ -594,6 +594,16 @@
 	}
 }
 
+@media (max-width: 499px) {
+	#home {
+		>main {
+			>section:first-of-type {
+				border-top: 0;
+			}
+		}
+	}
+}
+
 @media (max-width: 479px) {
 	#home {
 		>main {
